unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/Recurring_Billing_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Recurring Billing Line Items</label>
    <nameField>
        <displayFormat>RBLI-{0000000}</displayFormat>
        <label>Recurring Billing Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Billing Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>