unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Alias__c</fullName>
    <formula>Recurring_Billing_Master__r.Account__r.Account_Alias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Alias</label>
    <type>Text</type>
</CustomField>