unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/Account_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_del__c</fullName>
    <label>Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>