unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/Billing_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_End_Date__c</fullName>
    <label>Billing Period End Date</label>
    <type>Date</type>
</CustomField>