unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>C5_Account_Number__c</fullName>
    <formula>Recurring_Billing_Master__r.Account__r.Cat_5_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Account Number</label>
    <type>Text</type>
</CustomField>