unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Account_Text_Name__c.field-meta.xml
<CustomField>
    <fullName>C5_Account_Text_Name__c</fullName>
    <formula>Recurring_Billing_Master__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Account Text Name</label>
    <type>Text</type>
</CustomField>