unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_AR_Invoice_Type_ID_del__c.field-meta.xml
<CustomField>
    <fullName>C5_AR_Invoice_Type_ID_del__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 AR Invoice Type ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>