unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Client_System_ID__c.field-meta.xml
<CustomField>
    <fullName>C5_Client_System_ID__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Client System ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>