unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Cost__c.field-meta.xml
<CustomField>
    <fullName>C5_Cost__c</fullName>
    <formula>0.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>