unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>C5_Cost_Total__c</fullName>
    <formula>C5_Cost__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>