unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Detail_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>C5_Detail_Line_Type__c</fullName>
    <formula>'O'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Detail Line Type</label>
    <type>Text</type>
</CustomField>