unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Detail_Line_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>C5_Detail_Line_Type_ID__c</fullName>
    <formula>CASE(1,
  IF(ISPICKVAL(Billing_Category__c,"Carrier Access Services"),1,0),52,
  IF(ISPICKVAL(Billing_Category__c,"Data Center Services"),1,0),38,
  IF(ISPICKVAL(Billing_Category__c,"Customer Premise Equipment"),1,0),38,
  IF(ISPICKVAL(Billing_Category__c,"Miscellaneous Services"),1,0),38,
  IF(ISPICKVAL(Billing_Category__c,"Taxes, Surcharges &amp; Fees"),1,0),51,
  IF(ISPICKVAL(Billing_Category__c,"Texas Sales Tax"),1,0),50,
38)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Detail Line Type ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>