unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/c5_entity_id__c.field-meta.xml
<CustomField>
    <fullName>c5_entity_id__c</fullName>
    <label>c5 entity id</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>