unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_GL_Account_DR_ID__c.field-meta.xml
<CustomField>
    <fullName>C5_GL_Account_DR_ID__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 GL Account DR ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>