unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Insert_User__c.field-meta.xml
<CustomField>
    <fullName>C5_Insert_User__c</fullName>
    <formula>"rbell"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Insert User</label>
    <type>Text</type>
</CustomField>