unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Invoice_Form__c.field-meta.xml
<CustomField>
    <fullName>C5_Invoice_Form__c</fullName>
    <formula>"Cat-5 Recurring Invoice"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Invoice Form</label>
    <type>Text</type>
</CustomField>