unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Is_Create_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>C5_Is_Create_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C5 Is Create Work Order</label>
    <type>Checkbox</type>
</CustomField>