unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Is_Include__c.field-meta.xml
<CustomField>
    <fullName>C5_Is_Include__c</fullName>
    <defaultValue>true</defaultValue>
    <label>C5 Is Include</label>
    <type>Checkbox</type>
</CustomField>