unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Meter_Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>C5_Meter_Reading_Date__c</fullName>
    <formula>Now()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Meter Reading Date</label>
    <type>DateTime</type>
</CustomField>