unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Notepad__c.field-meta.xml
<CustomField>
    <fullName>C5_Notepad__c</fullName>
    <label>C5 Notepad</label>
    <type>TextArea</type>
</CustomField>