unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Overage_Charge_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>C5_Overage_Charge_Per_Unit__c</fullName>
    <formula>0.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Overage Charge Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>