unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Overage_Usage__c.field-meta.xml
<CustomField>
    <fullName>C5_Overage_Usage__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Overage Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>