unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>C5_PO_Number__c</fullName>
    <formula>""</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 PO Number</label>
    <type>Text</type>
</CustomField>