unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>C5_Service_Start_Date__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Service Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>