unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>C5_Unit_of_Measure__c</fullName>
    <formula>"Each"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Unit of Measure</label>
    <type>Text</type>
</CustomField>