unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/C5_Update_User__c.field-meta.xml
<CustomField>
    <fullName>C5_Update_User__c</fullName>
    <formula>"rbell"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C5 Update User</label>
    <type>Text</type>
</CustomField>