unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/CCE__c.field-meta.xml
<CustomField>
    <fullName>CCE__c</fullName>
    <label>CCE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPro Media</fullName>
            </value>
            <value>
                <fullName>Great America</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Mitel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>