unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/CCE_Bill_Sequence__c.field-meta.xml
<CustomField>
    <fullName>CCE_Bill_Sequence__c</fullName>
    <label>CCE Bill Sequence</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>