unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/CCE_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>CCE_Contract_Number__c</fullName>
    <label>CCE Contract Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>