unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/CCE_Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>CCE_Funding_Status__c</fullName>
    <label>CCE Funding Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCE_Lease_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Unfunded</fullName>
            </value>
            <value>
                <fullName>TSP Unfunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>