unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/CCE_Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>CCE_Lease_Type__c</fullName>
    <label>CCE Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCE_Portfolio__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>IPro Media FMV Lease</fullName>
            </value>
            <value>
                <fullName>IPro Media DBO Lease</fullName>
            </value>
            <value>
                <fullName>IPro Media TSP</fullName>
            </value>
            <value>
                <fullName>IPro Media AnyWare</fullName>
            </value>
            <value>
                <fullName>Great America FMV Lease</fullName>
            </value>
            <value>
                <fullName>Great America DBO Lease</fullName>
            </value>
            <value>
                <fullName>Great America Government Lease</fullName>
            </value>
            <value>
                <fullName>Great America TSP</fullName>
            </value>
            <value>
                <fullName>Great America AnyWare</fullName>
            </value>
            <value>
                <fullName>Wells Fargo FMV Lease</fullName>
            </value>
            <value>
                <fullName>Wells Fargo DBO Lease</fullName>
            </value>
            <value>
                <fullName>Wells Fargo Government Lease</fullName>
            </value>
            <value>
                <fullName>Wells Fargo AnyWare</fullName>
            </value>
            <value>
                <fullName>Mitel FMV Lease</fullName>
            </value>
            <value>
                <fullName>Mitel DBO Lease</fullName>
            </value>
            <value>
                <fullName>Mitel TSP Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>