unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/Copy_Product_Description_To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Copy_Product_Description_To_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Copy Product Description To Invoice</label>
    <type>Checkbox</type>
</CustomField>