unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/Invoice_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Product_Description__c</fullName>
    <label>Invoice Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>