unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/IP_Eligible_Revenue__c.field-meta.xml
<CustomField>
    <fullName>IP_Eligible_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box for Recurring Billing Line Items that generate revenue that is eligible for Independent Partner Commission calculations.</inlineHelpText>
    <label>IP Eligible Revenue</label>
    <type>Checkbox</type>
</CustomField>