unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Recurring Billing Line Items</relationshipLabel>
    <relationshipName>Recurring_Billing_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>