unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/Sort_Tel_Acct_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Sort_Tel_Acct_Product_Code__c</fullName>
    <formula>Telephone_Account_Number__c + " " + Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code Sort</label>
    <type>Text</type>
</CustomField>