unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/fields/Total_Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Charge__c</fullName>
    <formula>Monthly_Charge__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>