unpackaged/main/default/objects/Recurring_Billing_Line_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Name_del__c</columns>
    <columns>CCE_Contract_Number__c</columns>
    <columns>CCE_Funding_Status__c</columns>
    <columns>CCE_Lease_Type__c</columns>
    <columns>CCE_Portfolio__c</columns>
    <columns>CCE_Portfolio_Description__c</columns>
    <columns>CCE_Portfolio_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>